codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote manual /compact where remote compact output is compaction-only: follow-up layout uses the returned compaction item plus new user message.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", follow_up_request),])"
---
Scenario: Remote manual /compact where remote compact output is compaction-only: follow-up layout uses the returned compaction item plus new user message.

## Remote Compaction Request
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:hello remote compact
06:message/assistant:FIRST_REMOTE_REPLY

## Remote Post-Compaction History Layout
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:compaction:encrypted=true
05:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
06:message/user:after compact
