codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_mid_turn_compaction_summary_only_reinjects_context_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote mid-turn compaction where compact output has only a compaction item: continuation layout reinjects context before that compaction item.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", &post_compact_turn_request),])"
---
Scenario: Remote mid-turn compaction where compact output has only a compaction item: continuation layout reinjects context before that compaction item.

## Remote Compaction Request
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<root_orchestration_instructions>When several independent tool c...
05:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
06:message/user:USER_ONE
07:function_call/test_tool
08:function_call_output:unsupported call: test_tool

## Remote Post-Compaction History Layout
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
02:message/developer:<NO_TEXT>
03:message/developer:<root_orchestration_instructions>When several independent tool c...
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:compaction:encrypted=true
